	* configs/nucleus2g/nsh: Added and verified a NuttShell (NSH)
	  configuration for the LPC1768 on the Nucleus2G board.

5.8 2010-07-18 Gregory Nutt <gnutt@nuttx.org>

	* configs/nucleus2g/src/up_nsh.c and up_ssp.c: Add support
	  for SPI-based MMC/SD cards and integrate into the NSH example.
	* arch/arm/src/lm3s/lm3s_vectors.S: Correct vectors for GPIOC & D
	  interrupts.
	* arch/arm/src/lpc17xx/lp17_clockconfig.c: Power was not being
	  provided to GPIO module.  This is a critical bugfix!
	* arch/arm/src/lpc17xx/lpc17_serial.c: Improved logic to handle
	  missed TX interrupts.
	* arch/arm/src/lpc17xx/lpc17_ssp.c: Fix a hard fault during SSP
	  initialization.
	* configs/nucleus2g/src/up_led.c: Change how LEDs are controlled
	  so that they can be used both for NuttX instrumentation and
	  by application software.
	* include/net/uip/igmp.h and uip-igmp.h: Add header files ini
	  preparation for NuttX IGMP support
	* net/uip/uip_igmp*.c: Add IGMP support (untested on initial
	  checkin).
	* examples/igmp: Add a trivial test for IGMP (much more is needed)
	* configs/nucleus2g/usbserial and usbstorage: Add USB configurations
	  for testing purposes.
	* arch/arm/src/common/up_internal.h, cortexm3/up_assert.c,
	  */*_vectors.S: Correct compilations errors when CONFIG_ARCH_INTERRUPTSTACK
	  is enabled (feature still not tested)

5.9 2010-08-25 Gregory Nutt <gnutt@nuttx.org>

	* examples/nsh/nsh_telnetd.c: Fix compilation errors that happen
	  when both DHCPC and TELNETD are enabled in the Nuttshell.
	* graphics/nxglib/fb/nxglib_moverectangle.c: Fix a logic error
	  that caused an uninitialized variable warning.  I still don't 
	  have a test to prove that the changes are correct.
	* configs/olimex-lpc2378: Add support for the CodeSourcery toolchain
	  under Linux (contributed by Alan Carvalho de Assis).
	* arch/arm/src/lpc17xx/lpc17_gpio.c: Fix an important GPIO configuration
	  bug:  When attempting to set no pull-up or pull-down (floating),