@@ -191,7 +191,8 @@ CONFIG_LPC17_GPDMA=y
 #
 # SDIO Configuration
 #
-# CONFIG_SDIO_DMA is not set
+CONFIG_SDIO_DMA=y
+CONFIG_SDIO_DMAPRIO=0x0
 # CONFIG_SDIO_WIDTH_D1_ONLY is not set
 
 #
@@ -229,7 +230,7 @@ CONFIG_ARCH_EXTSRAM0HEAP=y
 #
 # CONFIG_ARCH_NOINTC is not set
 # CONFIG_ARCH_VECNOTIRQ is not set
-# CONFIG_ARCH_DMA is not set
+CONFIG_ARCH_DMA=y
 CONFIG_ARCH_IRQPRIO=y
 # CONFIG_CUSTOM_STACK is not set
 # CONFIG_ADDRENV is not set
