@@ -173,7 +173,7 @@ CONFIG_LPC17_GPDMA=y
 #
 # SDIO Configuration
 #
-# CONFIG_SDIO_DMA is not set
+CONFIG_SDIO_DMA=y
 CONFIG_SDIO_DMAPRIO=0x0
 # CONFIG_SDIO_WIDTH_D1_ONLY is not set
 
@@ -186,7 +186,7 @@ CONFIG_SDIO_DMAPRIO=0x0
 #
 # CONFIG_ARCH_NOINTC is not set
 # CONFIG_ARCH_VECNOTIRQ is not set
-# CONFIG_ARCH_DMA is not set
+CONFIG_ARCH_DMA=y
 CONFIG_ARCH_IRQPRIO=y
 # CONFIG_CUSTOM_STACK is not set
 # CONFIG_ADDRENV is not set
